# dtcc-tudelft-city3D

./: CMakeLists.txt  README.md  pyproject.toml  test_script.py
src/: CMakeLists.txt
src/cpp/: dtcc_tudelft_city3d.cpp
src/cpp/City3D/: CMakeLists.txt
src/cpp/City3D/code/: CMakeLists.txt
src/cpp/City3D/code/CLI_Example_1/: CMakeLists.txt
src/cpp/City3D/code/basic/: CMakeLists.txt
src/cpp/City3D/code/math/: CMakeLists.txt
src/cpp/City3D/code/method/: CMakeLists.txt  polyfit_info.h  reconstruction.cpp
src/cpp/City3D/code/model/: CMakeLists.txt
src/cpp/City3D/code/renderer/: CMakeLists.txt
src/dtcc_tudelft_city3d/: city3d.py
